Filters and routing
- add filters in order to check if the user/admin is logged
- change base of the routing
- create review entity

--- a/GMA_WEB/WebContent/WEB-INF/leaderboard.html
+++ b/GMA_WEB/WebContent/WEB-INF/leaderboard.html
@@ -9,10 +9,10 @@
 	<section>
 		<div>
 			<div align="right">
-			<a th:href="@{/Home}">Home</a> 
-			<a th:href="@{/Questionnaire}">Questionnaire</a> 
-			<a th:href="@{/Leaderboard}">Leaderboard</a> 
-			<a th:href="@{/Logout}">Logout</a>
+			    <a th:href="@{/App/Home}">Home</a> 
+				<a th:href="@{/App/Questionnaire}">Questionnaire</a> 
+				<a th:href="@{/App/Leaderboard}">Leaderboard</a> 
+				<a th:href="@{/App/Logout}">Logout</a>
 			</div>
 			<h1>Welcome to the Leaderboard Page!</h1>
 		</div>
