--- a/GMA_WEB/WebContent/WEB-INF/questionnaire.html
+++ b/GMA_WEB/WebContent/WEB-INF/questionnaire.html
@@ -9,10 +9,10 @@
 	<section>
 		<div>
 			<div align="right">
-				<a th:href="@{/Home}">Home</a> 
-				<a th:href="@{/Questionnaire}">Questionnaire</a>
-				<a th:href="@{/Leaderboard}">Leaderboard</a> 
-				<a th:href="@{/Logout}">Logout</a>
+			    <a th:href="@{/App/Home}">Home</a> 
+				<a th:href="@{/App/Questionnaire}">Questionnaire</a> 
+				<a th:href="@{/App/Leaderboard}">Leaderboard</a> 
+				<a th:href="@{/App/Logout}">Logout</a>/a>
 			</div>
 			<h1>Welcome to the Questionnaire Page!</h1>
 			<p th:if="${session.user.type == 0}"
