--- a/GMA_WEB/WebContent/WEB-INF/admin/deleteQuestionnaire.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/deleteQuestionnaire.html
@@ -12,7 +12,7 @@
 			<div align="right">
 			    <a th:href="@{/Admin/Home}">Home</a> 
 				<a th:href="@{/Admin/CreateQuestionnaire}">Create Questionnaire</a> 
-				<a th:href="@{/Admin/Leaderboard}">Leaderboard</a> 
+				<a th:href="@{/Admin/DeleteQuestionnaire}">Delete Questionnaire</a> 
 				<a th:href="@{/App/Logout}">Logout</a>
 			</div>
 			<h1>List of questionnaires</h1>
@@ -26,7 +26,6 @@
 			<thead>
 				<tr>
 				    <th>Id</th>
-					<th>Username</th>
 					<th>Product</th>
 					<th>Date</th>
 					<th>Product</th>
@@ -35,7 +34,6 @@
 			<tbody>
 				<tr th:each="q : ${questionnaires}">
                     <td th:text="${q.id}"> </td>
-					<td th:text="'User'"> </td>
 					<td th:text="${q.product.name}"> </td>
 					<td th:text="${#dates.format(q.date, 'yyyy-MM-dd')}"> </td>
                 	<td><a th:href="@{/Admin/RemoveQuestionnaire(idQuestionnaire=${q.id})}">Delete</a></td>
