--- a/GMA_WEB/WebContent/WEB-INF/leaderboard.html
+++ b/GMA_WEB/WebContent/WEB-INF/leaderboard.html
@@ -18,7 +18,11 @@
 		</div>
 	</section>
 
-	<section>
+	<section th:if="${statistics.isEmpty()}">
+	<p>There are no available statistics for the questionnaire of the day. Please, retry later!<p>
+	</section>
+
+	<section th:if="${!statistics.isEmpty()}">
 	<p>Leaderboard of the day!<p>
 		<table>
 			<thead>
@@ -29,10 +33,10 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="s : ${#lists.sort(statistics, points)} ${}">
-					<td th:text="${s.index + 1}"></td>
+				<tr th:each="s, iter : ${statistics}" th:if="${s.status == 1}">
+					<td th:text="${iter.index+1}"></td>
 					<td th:text="${s.user.username}"></td>
-					<td th:text="${s.points}"></td>
+					<td th:text="${s.score}"></td>
 				</tr>
 			</tbody>
 		</table>
