--- a/GMA_WEB/WebContent/WEB-INF/admin/createQuestionnaire.html
+++ b/GMA_WEB/WebContent/WEB-INF/admin/createQuestionnaire.html
@@ -2,8 +2,21 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Questionnaire</title>
+<title>Creation Questionnaire Page</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<body>
+	<section>
+		<div>
+			<div align="right">
+			    <a th:href="@{/Admin/Home}">Home</a> 
+				<a th:href="@{/Admin/CreateQuestionnaire}">Create Questionnaire</a> 
+				<a th:href="@{/Admin/DeleteQuestionnaire}">Delete Questionnaire</a> 
+				<a th:href="@{/App/Logout}">Logout</a>
+			</div>
+			<h1>Welcome admin!</h1>
+		</div>
+	</section>
+</body>
 <body>
  	<section>
 		<div>
@@ -15,60 +28,19 @@
 			<form action="#" th:action="@{/Admin/InsertQuestionnaire}" method="POST">
 				<fieldset id="mandatory">
 					<p>
-						Image Name: <input type="text" id="Name" name="pictureName">
+						Image Name: <input type="text" id="Name" name="pictureName" required>
 					</p>
 					<p>
-						Full Image: <input type="file" id="photoFile" name="picture">
+						Full Image: <input type="file" id="photoFile" name="picture" onchange="return fileValidation()" required>
 					</p>
 					
 					<p>
-						Insert Data(Questionnaires will be accepted only for today at a time after now)<input type="datetime-local" id="questionnareTime" name="time">
+						Insert Data(Questionnaires will be accepted only for today at a time after now)<input type="datetime-local" id="questionnareTime" name="time" required>
 					</p>
 				    <p id="questions">
-				    	Questions List <br> Question No:
+				    	Questions List
 					</p>
 					<button type="button" id="add">New Question</button>
-					<script>
-						var counter = 0;
-						var add = document.getElementById('add');
-						var newQuestion = document.getElementById('newQuestion');
-						add.onclick = function(){
-							document.getElementById("counter").value = counter;
-							var q = document.createElement("INPUT"); 
-							var p = document.createElement("P");
-							var s = document.createElement("SPAN");
-							var b = document.createElement("BUTTON");
-							s.innerText = "Question " + counter;
-							s.setAttribute("id", "s" + counter);
-							p.setAttribute("id", "p" + counter);
-							q.setAttribute("type", "text");
-							q.setAttribute("name", counter);
-							q.setAttribute("id", "q"+ counter);
-							b.setAttribute("type", "button");
-							b.setAttribute("id", counter);
-							b.innerText = "Delete";
-							p.appendChild(s);
-							p.appendChild(q);
-							p.appendChild(b);
-							document.getElementById("questions").appendChild(p);
-							counter ++;
-							b.onclick = function(){buttonFunctionDelete(this)};
-						}
-						function buttonFunctionDelete(button){
-							var buttonId = parseInt(button.id);
-							var buttonName = parseInt(button.name);
-							document.getElementById("p" + button.id).remove();
-							for (i = buttonId, j = buttonId+1; j < counter; j++, i++){
-									document.getElementById(j).setAttribute("id", i);
-									document.getElementById("q" + j).setAttribute("name", i);
-									document.getElementById("q" + j).setAttribute("id", "q" + i);
-									document.getElementById("s" + j).innerText = "Question " + i;
-									document.getElementById("s" + j).setAttribute("id", "s" + i);
-									document.getElementById("p" + j).setAttribute("id", "p" + i);
-								}
-							counter--;
-							}
-					</script>
 					<input type="hidden" id="counter" name="counter">
 				</fieldset>
 				<input type="submit" name="SendQuestionnaire" id="SendQuestionnaire" value="Submit">
@@ -76,4 +48,52 @@
 		</div>
 	</section>
 </body>
+<script>
+	var counter = 0;
+	var add = document.getElementById('add');
+	var newQuestion = document.getElementById('newQuestion');
+	add.onclick = function(){
+		document.getElementById("counter").value = counter;
+		var q = document.createElement("INPUT"); 
+		var p = document.createElement("P");
+		var s = document.createElement("SPAN");
+		var b = document.createElement("BUTTON");
+		s.innerText = "Question " + counter;
+		s.setAttribute("id", "s" + counter);
+		q.setAttribute("required", "required");
+		p.setAttribute("id", "p" + counter);
+		q.setAttribute("type", "text");
+		q.setAttribute("name", counter);
+		q.setAttribute("id", "q"+ counter);
+		b.setAttribute("type", "button");
+		b.setAttribute("id", counter);
+		b.innerText = "Delete";
+		p.appendChild(s);
+		p.appendChild(q);
+		p.appendChild(b);
+		document.getElementById("questions").appendChild(p);
+		counter ++;
+		b.onclick = function(){buttonFunctionDelete(this)};
+	}
+	function buttonFunctionDelete(button){
+		var buttonId = parseInt(button.id);
+		var buttonName = parseInt(button.name);
+		document.getElementById("p" + button.id).remove();
+		for (i = buttonId, j = buttonId+1; j < counter; j++, i++){
+				document.getElementById(j).setAttribute("id", i);
+				document.getElementById("q" + j).setAttribute("name", i);
+				document.getElementById("q" + j).setAttribute("id", "q" + i);
+				document.getElementById("s" + j).innerText = "Question " + i;
+				document.getElementById("s" + j).setAttribute("id", "s" + i);
+				document.getElementById("p" + j).setAttribute("id", "p" + i);
+			}
+		counter--;
+		}
+	function fileValidation(){
+		var fileName = document.getElementById("photoFile").value;
+		alert(document.getElementById("photoFile").value);
+		alert(document.getElementById("photoFile").val());
+		alert(document.getElementById("photoFile").text);
+	} 
+</script>
 </html>
